--- a/main.css
+++ b/main.css
@@ -2,10 +2,27 @@
 
 html {
   font-family: 'Red Hat Display', sans-serif;
+  background-size: contain;
+  background-color: hsl(225, 100%, 94%);
+  background-repeat: no-repeat;
 }
 
+h2,
 p {
-  font-size: 16px;
+  margin: 0;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.content {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .attribution {
@@ -21,6 +38,9 @@ p {
   border-radius: 16px;
   margin: 0 auto;
   max-width: 343px;
+  background-color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .order__hero {
@@ -33,5 +53,98 @@ p {
 }
 
 .order__info {
+  padding: 1.5rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.order__info__title {
+  font-weight: 900;
+  margin-bottom: 0;
+}
+
+.order__info__description {
+  color: hsl(224, 23%, 55%);
+  padding: 16px;
+}
+
+.order__info__card {
+  background-color: hsl(225, 100%, 98%);
   padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 14px;
+  height: 56px;
+}
+
+.order__info__card__price__plan {
+  margin: 4px;
+  font-weight: 700;
+}
+
+.order__info__card__price__amount {
+  margin: 4px;
+  color: hsl(224, 23%, 55%);
+}
+
+.order__info__card__btn {
+  text-decoration: underline;
+  color: hsl(245, 75%, 52%);
+}
+
+.order__info__card__btn:hover {
+  text-decoration: none;
+  color: hsl(224, 23%, 55%);
+}
+
+.order__info__actions {
+  margin: 16px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.order__info__actions {
+  margin: 16px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.order__info__actions__btn--submit {
+  padding: 1rem;
+  margin: 0.5rem 0;
+  background-color: hsl(245, 75%, 52%);
+  color: white;
+  border-radius: 8px;
+}
+
+.order__info__actions__btn--submit:hover {
+  background-color: hsl(245, 75%, 74%);
+}
+
+.order__info__actions__btn--cancel {
+  padding: 1rem;
+  margin: 0.5rem 0;
+  color: hsl(224, 23%, 55%);
+}
+
+.order__info__actions__btn--cancel:hover {
+  padding: 1rem;
+  margin: 0.5rem 0;
+  color: black;
+}
+
+footer {
+  display: none;
+}
+
+@media (min-width: 376px) {
+  html {
+    background-image: url('./images/pattern-background-desktop.svg');
+  }
+
+  footer {
+    display: block;
+  }
 }
