Finish desktop design

--- a/main.css
+++ b/main.css
@@ -146,5 +146,10 @@ footer {
 
   footer {
     display: block;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding-bottom: 2rem;
   }
 }
